<resources>
    <string name="app_name">SampleMD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="title_activity_favourites">FavouritesActivity</string>


    <string name="nav_list">List View</string>
    <string name="nav_tile">Tile View</string>
    <string name="nav_card">Card View</string>
    <string name="nav_header_text">Click to start login activity</string>
    <string name="nav_recycler_view">Recycler View</string>
    <string name="nav_scrolling">Details</string>
    <string name="nav_fullscreen">FullScreen</string>
    <string name="nav_bottom_navigation">Bottom Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Donations</string>
    <string name="main_feedback_email">Feedback:MaterialDesign</string>
    <string name="main_not_found_email">Not found email app</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="nav_color">Material Design Color</string>


    <!-- String related to RecyclerView -->
    <string name="title_activity_recycler_view">RecyclerView</string>
    <string name="tv_recycler_item_1">Swipe down to refresh</string>
    <string name="tv_recycler_item_2">Swipe left or right to dismiss it</string>
    <string name="tv_recycler_item_3">Drag up or down to move it</string>
    <string name="title_activity_share_view">Share View</string>
    <string name="share_view_press_it">You can press it</string>
    <string name="no_more_data">No more data</string>
    <string name="item_swipe_dismissed">Dismissed</string>
    <string name="item_swipe_undo">Undo</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>


    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="settings_switch_preference_title">Switch Preference</string>
    <string name="settings_switch_preference_summary">Switch Preference Summary</string>
    <string name="settings_check_box_preference_title">Check Box Preference</string>
    <string name="settings_edit_text_preference_title">Edit Text Preference</string>
    <string name="settings_edit_text_preference_default_value">Material Design</string>
    <string name="settings_list_preference_dialog_title">List Preference</string>
    <string name="settings_list_preference_title">List Preference</string>
    <string name="settings_multi_select_list_preference_dialog_title">Multi Select List Preference</string>
    <string name="settings_multi_select_list_preference_title">Multi Select List Preference</string>
    <string name="settings_preference_click_title">OnPreferenceClickListener</string>
    <string name="settings_preference_click_to_activity">Click to start an activity</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_on_preference_click">onPreferenceClick</string>
    <string name="title_activity_maps">Map</string>


</resources>